<resources>
    <string name="app_name">UcoinNew</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entity_find_fav">收藏</string>
    <string name="entity_find_share">分享</string>
    <string name="entity_task_coin_award">奖励</string>
    <string name="entity_task_button">去做任务</string>
    <string name="entity_find_change">可换</string>
    <string name="tab_change_coin_header_fav">自选</string>
    <string name="tab_change_coin_header_asset">资产</string>
    <string name="tab_change_coin_header_exchange">交易</string>
    <string name="tab_change_coin_header_title_increase">货币/涨跌幅</string>
    <string name="tab_change_coin_header_title_price">最新价(UC)</string>
    <string name="tab_change_coin_header_title_market_value">流通币值(UC)</string>
    <string name="rmb">￥</string>
    <string name="percent">%</string>
    <string name="midline">-</string>
    <string name="tab_user_header_total_value">资产总市值: </string>
    <string name="tab_user_header_available">可用: </string>
    <string name="tab_user_header_task">任务凭证</string>
    <string name="tab_user_header_get_coin_code">收币码</string>
    <string name="tag_user_header_trade">交易</string>
    <string name="tab_user_header_bill">账单</string>
    <string name="tab_user_header_right">权益交换</string>
    <string name="tab_user_header_right_fav">权益收藏</string>
    <string name="tab_user_header_qrcode">扫码</string>
    <string name="tab_user_header_market_value">市值(UC)</string>
    <string name="tab_user_header_number">持有量</string>
    <string name="tab_user_header_coin_name">资产名称</string>
    <string name="activity_make_task_title_bar_title">做任务</string>
    <string name="activity_make_task_submit">提交</string>
    <string name="activity_make_task_upload_tip">请上传您的任务凭证，可以是做任务的照片或者视频</string>
    <string name="activity_make_task_upload">上传</string>
    <string name="activity_right_available">有效</string>
    <string name="activity_right_exchange_num_text">已兑换</string>
    <string name="activity_right_exchange_unit">笔</string>
    <string name="activity_right_comment_title">评论</string>
    <string name="activity_right_suggestion_title">猜您喜欢</string>
    <string name="activity_right_exchange_dialog_title">很抱歉，您的余额不足</string>
    <string name="activity_right_exchange_dialog_buy">去买入</string>
    <string name="activity_right_exchange_dialog_task">去赚取</string>
    <string name="activity_make_task_choose_pic_dialog_title">请选择您上传图片的方式</string>
    <string name="dialog_positive">确定</string>
    <string name="dialog_negative">取消</string>
    <string name="activity_make_task_remove_upload_pic_dialog_title">是否确定删除?</string>
    <string name="vertical_line">|</string>
    <string name="activity_coin_button_buy">买入</string>
    <string name="activity_coin_button_sell">卖出</string>
    <string name="activity_coin_button_cancel">撤销</string>
    <string name="activityCoinInfoTitle">权益简介</string>
    <string name="activity_right_title">权益</string>
    <string name="activity_coin_task_title">任务列表</string>
    <string name="activity_coin_task_desc">完成以下任务，即可获得</string>
    <string name="activity_coin_task_go_to_task_button">去领任务</string>
    <string name="activity_coin_task_task_text">任务</string>
    <string name="activity_coin_task_award">奖励</string>
    <string name="activity_coin_task_date">有效期</string>
    <string name="activity_coin_task_go_to_make_task">完成任务</string>
    <string name="activity_coin_task_detail_title">任务详情</string>
    <string name="activity_get_coin_qrcode_title">收付款</string>
    <string name="tab_user_header_no_coin_tip">您还没有自己的专属币哦!</string>
    <string name="tab_user_header_create_coin">点击创建</string>
    <string name="activity_login">登录</string>
    <string name="activity_register">注册</string>
    <string name="activity_register_send_verify_code">获取验证码</string>
    <string name="dialog_tip_title">提示</string>
    <string name="activity_create_coin_title">设置权益币</string>
    <string name="activity_create_coin_upload_logo">上传LOGO</string>
    <string name="dialog_unknow_err_tip">未知错误，请稍后再试</string>
    <string name="activity_create_coin_product_title_bar_title">发布权益</string>
    <string name="activity_create_coin_product_upload">上传</string>
    <string name="activity_create_coin_task_title_bar_title">发布任务</string>
    <string name="activity_create_coin_task_upload">上传</string>
    <string name="activity_login_telephone">手机号</string>
    <string name="activity_login_password">密码</string>
    <string name="dialog_loading">加载中</string>
    <string name="dialog_please_wait">请稍候</string>
    <string name="activity_login_validation_telephone">请输入手机号</string>
    <string name="activity_login_validation_password">请输入密码</string>
    <string name="activity_register_validation_telephone">请输入手机号</string>
    <string name="activity_register_validation_verify_code">请输入验证码</string>
    <string name="activity_register_validation_password">请输入密码</string>
    <string name="activity_register_validation_repassword">请输入确认密码</string>
    <string name="activity_register_telephone">手机号</string>
    <string name="activity_register_verify_code">验证码</string>
    <string name="activity_register_password">密码</string>
    <string name="activity_register_repassword">重复密码</string>
    <string name="activity_create_coin_name">请输入代币名称</string>
    <string name="activity_create_coin_symbol">请输入代币缩写</string>
    <string name="activity_create_coin_total_supply">请输入发行量</string>
    <string name="activity_create_coin_decimals">请输入小数位</string>
    <string name="activity_create_coin_name_title">全称(如: Ethereum, BtcCoin)</string>
    <string name="activity_create_coin_symbol_title">缩写(如: ETH, BTC)</string>
    <string name="activity_create_coin_total_supply_title">发行量</string>
    <string name="activity_create_coin_decimals_title">小数位</string>
    <string name="activity_create_coin_submit">提交</string>
    <string name="activity_create_coin_product_title">请输入标题</string>
    <string name="activity_create_coin_product_desc">请输入描述</string>
    <string name="activity_create_coin_product_price">请输入价格</string>
    <string name="activity_create_coin_product_amount">请输入总量</string>
    <string name="activity_create_coin_product_start_date">请选择开始日期</string>
    <string name="activity_create_coin_product_end_date">请选择结束日期</string>
    <string name="activity_create_coin_product_input_title">标题</string>
    <string name="activity_create_coin_product_input_desc">描述</string>
    <string name="activity_create_coin_product_input_price">价格</string>
    <string name="activity_create_coin_product_input_amount">总量</string>
    <string name="activity_create_coin_product_input_start_date">开始日期</string>
    <string name="activity_create_coin_product_input_end_date">结束日期</string>
    <string name="activity_create_coin_product_input_tags">标签(空格分割)</string>
    <string name="activity_create_coin_product_submit">提交</string>
    <string name="activity_create_coin_task_title">请输入标题</string>
    <string name="activity_create_coin_task_desc">请输入描述</string>
    <string name="activity_create_coin_task_bonus">请输入奖励</string>
    <string name="activity_create_coin_task_amount">请输入总量</string>
    <string name="activity_create_coin_task_start_date">请选择开始日期</string>
    <string name="activity_create_coin_task_end_date">请选择结束日期</string>
    <string name="activity_create_coin_task_input_title">标题</string>
    <string name="activity_create_coin_task_input_desc">描述</string>
    <string name="activity_create_coin_task_input_bonus">奖励</string>
    <string name="activity_create_coin_task_input_amount">总量</string>
    <string name="activity_create_coin_task_input_start_date">开始日期</string>
    <string name="activity_create_coin_task_input_end_date">结束日期</string>
    <string name="activity_create_coin_task_input_tags">标签(空格分割)</string>
    <string name="activity_create_coin_task_submit">提交</string>
    <string name="activity_coin_manage_title">我发的币</string>
    <string name="dialog_tip_uploading_image">请稍等,正在上传图片</string>
    <string name="tag_user_header_create_coin">造币</string>
    <string name="entity_user_coin_total_transfers">交易量:</string>
    <string name="entity_user_coin_total_holders">持有人:</string>
    <string name="activity_coin_manage_coin_total_supply">发行量</string>
    <string name="activity_coin_manage_coin_intro">代币介绍</string>
    <string name="activity_coin_manage_coin_product">代币权益</string>
    <string name="activity_coin_manage_coin_task">获取代币</string>
    <string name="tab_coin_manage_intro_add_button">去添加</string>
    <string name="coin_manage_intro_add_tip">您还没有添加代币描述</string>
    <string name="entity_coin_task_date_range">有效期:</string>
    <string name="entity_coin_task_bonus">奖励代币</string>
    <string name="entity_coin_task_amount">人数限制</string>
    <string name="entity_coin_product_date_range">有效期:</string>
    <string name="entity_coin_product_price">消耗代币</string>
    <string name="entity_coin_product_amount">限制人数</string>
    <string name="entity_coin_product_sales">销量</string>
</resources>
