<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <com.wuhenzhizao.titlebar.widget.CommonTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBarHeight="50dp"
        app:showBottomLine="true"
        app:centerType="textView"
        app:centerText="@string/activity_create_coin_task_title_bar_title"
        app:leftCustomView="@layout/view_title_bar_left_back"
        app:leftType="customView" />

    <android.support.v4.widget.NestedScrollView
        android:orientation="vertical"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_create_coin_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_create_coin_task_title_content"
                    android:lines="1"
                    android:hint="@string/activity_create_coin_task_input_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme"
                    android:textSize="16sp"
                    android:paddingBottom="20dp"
                    android:textColor="@color/colorGeneralText"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_create_coin_task_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:lines="3"
                    android:gravity="top"
                    android:layout_gravity="top"
                    android:id="@+id/activity_create_coin_task_desc_content"
                    android:hint="@string/activity_create_coin_task_input_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme"
                    android:textSize="16sp"
                    android:paddingBottom="20dp"
                    android:textColor="@color/colorGeneralText"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_create_coin_task_bonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:lines="1"
                    android:id="@+id/activity_create_coin_task_bonus_content"
                    android:hint="@string/activity_create_coin_task_input_bonus"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme"
                    android:textSize="16sp"
                    android:paddingBottom="20dp"
                    android:textColor="@color/colorGeneralText"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_create_coin_task_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:lines="1"
                    android:id="@+id/activity_create_coin_task_tags_content"
                    android:hint="@string/activity_create_coin_task_input_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme"
                    android:textSize="16sp"
                    android:paddingBottom="20dp"
                    android:textColor="@color/colorGeneralText"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_create_coin_task_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:lines="1"
                    android:id="@+id/activity_create_coin_task_amount_content"
                    android:hint="@string/activity_create_coin_task_input_amount"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme"
                    android:textSize="16sp"
                    android:paddingBottom="20dp"
                    android:textColor="@color/colorGeneralText"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_create_coin_task_start_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:lines="1"
                    android:id="@+id/activity_create_coin_task_start_date_picker_content"
                    android:hint="@string/activity_create_coin_task_input_start_date"
                    android:inputType="date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme"
                    android:textSize="16sp"
                    android:paddingBottom="20dp"
                    android:textColor="@color/colorGeneralText"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_create_coin_task_end_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:lines="1"
                    android:id="@+id/activity_create_coin_task_end_date_picker_content"
                    android:hint="@string/activity_create_coin_task_input_end_date"
                    android:inputType="date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme"
                    android:textSize="16sp"
                    android:paddingBottom="20dp"
                    android:textColor="@color/colorGeneralText"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/activity_create_coin_task_need_evidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="上传证据"
                    android:textColor="@color/colorFormLabel"
                    android:textSize="16sp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="4dp"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/activity_create_coin_task_need_evidence_content"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="是" />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="否" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:id="@+id/activity_create_coin_task_take_photo"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/activity_create_coin_task_upload_border">
                    <com.mikepenz.iconics.view.IconicsTextView
                        android:text="{faw-plus-circle}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/icon"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_create_coin_task_upload"/>
                </LinearLayout>
                <android.support.v7.widget.GridLayout
                    android:id="@+id/activity_create_coin_task_upload_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowCount="2"
                    app:columnCount="4">
                </android.support.v7.widget.GridLayout>
            </LinearLayout>
            <Button
                android:id="@+id/activity_create_coin_task_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/activity_create_coin_task_submit"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginVertical="20dp"
                android:background="@drawable/activity_create_coin_task_submit_button_border_radius"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>