<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:background="@color/colorGeneralBg">
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/tab_change_coin_ucoin_logo"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="平台24小时总成交量2.5亿(UC)"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>
    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:rowCount="1"
        app:columnCount="3">
        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:orientation="vertical"
            android:gravity="center">
            <com.mikepenz.iconics.view.IconicsTextView
                android:text="{faw-star}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/icon"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/colorGeneralText"
                android:text="@string/tab_change_coin_header_fav"/>
        </LinearLayout>
        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:orientation="vertical"
            android:gravity="center">
            <com.mikepenz.iconics.view.IconicsTextView
                android:text="{faw-money-check-alt}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/icon"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/colorGeneralText"
                android:text="@string/tab_change_coin_header_asset"/>
        </LinearLayout>
        <LinearLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:orientation="vertical"
            android:gravity="center">
            <com.mikepenz.iconics.view.IconicsTextView
                android:text="{faw-exchange-alt}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/icon"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textColor="@color/colorGeneralText"
                android:text="@string/tab_change_coin_header_exchange"/>
        </LinearLayout>
    </android.support.v7.widget.GridLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp">
        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorGeneralCommentBg"
            app:rowCount="1"
            app:columnCount="3">
            <LinearLayout
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGeneralText"
                    android:text="@string/tab_change_coin_header_title_increase"/>
                <com.mikepenz.iconics.view.IconicsTextView
                    android:text="{faw-sort-down}"
                    android:textColor="@color/colorGeneralText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGeneralText"
                    android:text="@string/tab_change_coin_header_title_price"/>
                <com.mikepenz.iconics.view.IconicsTextView
                    android:text="{faw-sort-down}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/colorGeneralText"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGeneralText"
                    android:text="@string/tab_change_coin_header_title_market_value"/>
                <com.mikepenz.iconics.view.IconicsTextView
                    android:text="{faw-sort-down}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/colorGeneralText"
                    android:textSize="16sp" />
            </LinearLayout>
        </android.support.v7.widget.GridLayout>
    </LinearLayout>
</LinearLayout>