<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <include layout="@layout/view_toolbar" />
    <android.support.v4.widget.NestedScrollView
        android:orientation="vertical"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/activity_register_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_register_telephone_content"
                        android:lines="1"
                        android:hint="@string/activity_register_telephone"
                        android:inputType="number|numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextTheme"
                        android:textSize="16sp"
                        android:paddingBottom="20dp"
                        android:textColor="@color/colorGeneralText"/>
                </android.support.design.widget.TextInputLayout>
                <com.hbb20.CountryCodePicker
                    android:id="@+id/activity_login_ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="12dp"
                    app:ccp_textSize="16sp"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_autoDetectLanguage="true"
                    app:ccp_defaultLanguage="ENGLISH"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/activity_register_verify_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:lines="1"
                        android:id="@+id/activity_register_verify_code_content"
                        android:hint="@string/activity_register_verify_code"
                        android:maxLength="4"
                        android:inputType="number|numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextTheme"
                        android:textSize="16sp"
                        android:paddingBottom="20dp"
                        android:textColor="@color/colorGeneralText"/>
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/activity_register_send_verify_code"
                    android:layout_alignParentRight="true"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/activity_register_send_verify_code"
                    android:textColor="@color/colorWhite"
                    android:background="@color/icon"/>
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_register_password_content"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:hint="@string/activity_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme"
                    android:textSize="16sp"
                    android:paddingBottom="20dp"
                    android:textColor="@color/colorGeneralText"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_register_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:lines="1"
                    android:inputType="textPassword"
                    android:id="@+id/activity_register_repassword_content"
                    android:hint="@string/activity_register_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextTheme"
                    android:textSize="16sp"
                    android:paddingBottom="20dp"
                    android:textColor="@color/colorGeneralText"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/activity_register_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/activity_register"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginTop="40dp"
                android:background="@drawable/activity_register_submit_button_border_radius"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>